--- a/static/css/main.less
+++ b/static/css/main.less
@@ -33,5 +33,8 @@
 
 .twitter-icon-light {
     display: inline-block;
-    background: url('../img/twitter-bird-dark-bgs.png') no-repeat;
+    background-repeat: no-repeat;
+    //This is a large image - resize it to the size you actually need.
+    //IE doesn't resize transparent pngs well.
+    //background-image: url('../img/twitter-bird-dark-bgs.png');
 }
