--- a/static/css/navbar.less
+++ b/static/css/navbar.less
@@ -91,7 +91,8 @@
 
         .twitter-icon-light {
             background-position: center;
-            background-size: 20px 20px;
+            background-size: 20px;
+            background-image: url('../img/twitter-bird-dark-bgs-20.png');
             width: 14px;
             height: 18px;
             vertical-align: middle;
