--- a/static/css/tweetlist.less
+++ b/static/css/tweetlist.less
@@ -69,8 +69,8 @@
 
         .twitter-icon-light {
             background-position: center;
-            background-size: 24px 24px;
-
+            background-size: 24px;
+            background-image: url('../img/twitter-bird-dark-bgs-24.png');
             width: 18px;
             height: 18px;
             vertical-align: bottom;
